# TRICFlow

./: .gitignore  MANIFEST.in  README.md  environment.yml  pyproject.toml  setup.cfg  setup.py
example/assemble_paths/API/: run.py
example/assemble_paths/CLI/: TS3_path.xyz  command.sh  full_pathway.xyz
example/full_workflow/single_step_cases/single_step_HCN/: full_pathway.xyz  interpolated_splice.xyz  optimized_endpoints.xyz  run.py
example/full_workflow/single_step_cases/single_step_TS1/: full_pathway.xyz  initial.xyz  optimized_endpoints.xyz  run.py
example/full_workflow/single_step_cases/single_step_TS2/: initial.xyz  optimized_endpoints.xyz  run.py
example/full_workflow/single_step_cases/single_step_TS3/: initial.xyz  optimized_endpoints.xyz  run.py
example/full_workflow/single_step_cases/single_step_TS4/: full_pathway.xyz  initial.xyz  optimized_endpoints.xyz  run.py
example/full_workflow/single_step_cases/single_step_TS5/: full_pathway.xyz  initial.xyz  optimized_endpoints.xyz
example/full_workflow/single_step_cases/single_step_TS6/: full_pathway.xyz  initial.xyz  optimized_endpoints.xyz
example/get_energies/API/: run.py
example/get_energies/CLI/: command.sh  energies.json  psi4_HCN.in
example/individual_steps/API/: run.py
tests/: README.md  conftest.py  test_assemble_pathways.py  test_cli_wrappers.py  test_dynamic_targets.py  test_interpolation_output.py  test_irc_hessian_retry.py  test_neb_barrierless.py  test_optimize_ts_failure.py  test_pathway_assembly.py  test_pic_orientation.py  test_postopt_trajectory.py  test_workflow_cache.py  test_workflow_calc_kwargs.py
tests/data/: HCN_energies.json  IM4.xyz  IM6.xyz  full_trj.xyz  hessian.txt  irc_input.xyz  irc_result.xyz  ts_input.xyz  two_frames.xyz
tests/data/full_workflow/: initial_HCN.xyz
tricflow/: __init__.py  _version.py  errors.py  log_file_only.ini  params.py  refine.py  tricflow.py
(+740 files in other folders)
